Endpoint para softDelete carreras y Fix de acceso a endpoints
