# api/swagger.yaml
@@ -1612,11 +1612,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     
-    delete:
+  /api/activities/degrees/disable/{id}:
+    put:
       tags:
         - Carreras
-      summary: Eliminar carrera
-      description: Eliminar una carrera del sistema (solo admin)
+      summary: Deshabilitar carrera
+      description: Deshabilitar una carrera del sistema (solo admin)
       parameters:
         - name: id
           in: path
@@ -1626,7 +1627,7 @@ paths:
           description: ID de la carrera
       responses:
         '200':
-          description: Carrera eliminada exitosamente
+          description: Carrera deshabilitada exitosamente
           content:
             application/json:
               schema:
@@ -1639,6 +1640,39 @@ paths:
                 $ref: '#/components/schemas/Error'
         '404':
           description: Carrera no encontrada
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /api/activities/degrees/restore/{id}:
+    put:
+      tags:
+        - Carreras
+      summary: Restaurar carrera deshabilitada
+      description: Restaurar una carrera que ha sido deshabilitada (solo admin)
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: ID de la carrera deshabilitada
+      responses:
+        '200':
+          description: Carrera restaurada exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Success'
+        '403':
+          description: Acceso denegado - Solo administradores
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Carrera a Restaurar no encontrada
           content:
             application/json:
               schema:
